# wol-mitmproxy-addon

./: README.md  pyproject.toml
.github/: dependabot.yml
templates/: config.yaml  keep-host-awake-when-connected.service  keep-host-awake-when-connected.timer  wol-mitmproxy.service
tests/: mulihosts.yaml
wol_mitmproxy_addon/: main.py
